--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "tailwindcss": "^3.4.3"
   }
 }
